# autorecon

./: .gitignore  pyproject.toml  requirements.txt
autorecon/cli/: main.py
autorecon/core/: __init__.py  healthcheck.py
autorecon/core/scanner/: alive_scanner.py  nmap_port_scanner.py  socket_port_scanner.py
autorecon/data/: subdomain_wordlist.txt
autorecon/storage/: alive_repo.py  db.py  open_port_repo.py
autorecon/utils/: cli_formatting.py  config.py
cli/: main.py
core/: healthcheck.py
core/scanner/: alive_scanner.py  socket_port_scanner.py
storage/: db.py  open_port_repo.py
utils/: cli_formatting.py  config.py  logging.py
