[project]
name = "autorecon"
version = "0.1.0"
dependencies = [
    "click",
    "httpx",
    "pydantic",
    "loguru",
    "pymongo",  
    "python-dotenv",
    "pydantic-settings",
    "sockets",
    "python-nmap",
    "rich",
]

[project.scripts]
autorecon = "autorecon.cli.main:cli"

[tool.setuptools.package-data]
"autorecon.data" = ["*.txt"]

[tool.setuptools]
packages = { find = { include = ["autorecon*"] } }
